--- a/index.html
+++ b/index.html
@@ -6,10 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap Css -->
     <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css" />
+    <!-- style css -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- Title -->
     <title>My-Protfolio</title>
   </head>
   <body>
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg nav_bg nav_shadow">
+          <div class="container-fluid">
+        <a class="navbar-brand ms-1 nav_brand" href="#">Kawsar Protfolio</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item active">
+              <a class="nav-link Nav_color nav_text nav_hover" href="#">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link Nav_color nav_text nav_hover" href="#"
+                >About</a
+              >
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link Nav_color nav_text nav_hover" href="#"
+                >Protfolio</a
+              >
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link Nav_color nav_text nav_hover" href="#">Blog</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link Nav_color nav_text nav_hover" href="#"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <!-- Navbar End -->
     <!-- Bootstrap js -->
     <script src="./assets/js/bootstrap/bootstrap.bundle.min.js"></script>
   </body>
