--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="nav-link Nav_color nav_text nav_hover" href="#skile">Skile</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link Nav_color nav_text nav_hover" href="#"
+                <a class="nav-link Nav_color nav_text nav_hover" href="#contact"
                   >Contact</a
                 >
               </li>
@@ -345,6 +345,35 @@
     </section>
     <!-- Project Section End -->
 
+    <!-- Contat Section Start -->
+    <section class="container section_gap section_shadow" id="contact">
+      <div class="row">
+        <h2 class="about_title">Contact me....</h2>
+        <h1 class="about_title text-light ">Get In Touch</h1>
+        <div class="col-12 col-sm-12 col-md-10 col-lg-10 m-auto section_shadow">
+          <form action="" class="py-4">
+            <div class="form-floating mb-3">
+              <input type="text" name="name" class="form-control" id="floatingInput" placeholder="Enter your Name">
+              <label for="floatingInput">Name*</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <label for="floatingInput">Email*</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="text" name="subject" class="form-control" id="floatingInput" placeholder="Enter your Name">
+              <label for="floatingInput">Subject*</label>
+            </div>
+            <div class="form-floating mb-3">
+              <textarea name="messages" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+              <label for="floatingTextarea2">Messages*</label>
+            </div>
+            <button type="submit" class="btn_regular w-100 mb-3 ">Submit</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- Contat Section End -->
 
 
 
