--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
       <nav class="navbar navbar-expand-lg nav_bg nav_shadow sticky-top">
         <div class="container-fluid">
-          <a class="navbar-brand ms-1 nav_brand" href="#">Kawsar Protfolio</a>
+          <a class="navbar-brand ms-1 nav_brand" href="./index.html">Kawsar Protfolio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars nav_toggle_icon"></i>
           </button>
@@ -46,7 +46,7 @@
                 >
               </li>
               <li class="nav-item active">
-                <a class="nav-link Nav_color nav_text btn_regular" href="#"
+                <a class="nav-link Nav_color nav_text btn_regular" target="_blank" href="https://drive.google.com/file/d/19ZJDlvtd-_qOIGKBwj4-wF_pb1jgE1xA/view?usp=sharing"
                   >Download Resume</a
                 >
               </li>
@@ -98,7 +98,7 @@
             <p class="about_text">
               I am a very proficient & hard-working web application developer specializing in both frontend & backend. I build single-page web application expertise with the rest of API. Worked & led in many projects like management systems and eCommerce websites. Use modern & most used technologies these days like Laravel & React.js & Node Js. Always passionate about learning new technologies and like to work in a competitive environment.
             </p>
-            <a href="http://" class="btn_regular about_btn" target="_blank" rel="noopener noreferrer">Download Resume</a>
+            <a href="https://drive.google.com/file/d/19ZJDlvtd-_qOIGKBwj4-wF_pb1jgE1xA/view?usp=sharing"  download="kawsar_resume.pdf" class="btn_regular about_btn" target="_blank" rel="noopener noreferrer">Download Resume</a>
           </div>
         </div>
 
@@ -375,17 +375,28 @@
     </section>
     <!-- Contat Section End -->
 
+    <!-- Footer Section Start -->
+    <footer class="container section_shadow">
+      <div class="row">
+        <div class="col-12">
+          <div class="footer_content">
+            <h2 class="hero_name text-center pt-3">Md Kawsar</h2>
+            <p class="text-center mb-0">Email: kawsar721g@gmail.com</p>
+            <p class="text-center">Phone: +8801798021438</p>
+            <p class="text-center">&copy;2021.All rights reserved by MD Kawsar.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer Section End -->
+
 
 
     <!-- Bootstrap js -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
-    <!-- Jquery js -->
-    <script src="./assets/js/jquery.js"></script>
+  
     <script src="./assets/js/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- Type js -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js"></script>
     <script src="./assets/js/TypeJs/type.function.js"></script>
-    <!-- mexitup js -->
-    <script src="./assets/js/mixetup.main.js"></script>
   </body>
 </html>
