--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
               <img src="https://i.ibb.co/T2bwZFv/01798021438-removebg-preview.png">
              </div>
               <ul class="hero_social">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="#"><i class="fab fa-github"></i></a></li>
+                <li><a target="_blank" href="https://www.facebook.com/learnwithkawsar"><i class="fab fa-facebook"></i></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/learnwithkawsar/"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a target="_blank" href="https://github.com/learnwithkawsar721"><i class="fab fa-github"></i></a></li>
               </ul>
             </div>
           </div>
